tests/NormalTests/paczka2/big_fuzzy/91749613.err
Error in line 4: S685 S466 79,9
Error in line 6: XdexF5vQjM3 S391 67,4
Error in line 12: XdexF5vQjM3 S466 3,7
Error in line 5: S685 S391 53,5
Error in line 10: lOO A212 296,5
Error in line 27: lOO S391 50,9
Error in line 36: GRT S391 12,5
Error in line 46: Zzw S466 6,25
Error in line 50: XdexF5vQjM3 S391 74,5
Error in line 58: wGJ2qt0p S466 233,86
Error in line 62: XdexF5vQjM3 S685 -1,0
Error in line 61: GRT A212 235,2
Error in line 45: wGJ2qt0p S466 87,5
Error in line 67: S685 S466 55,3
Error in line 70: S685 A212 53,8
Error in line 52: XdexF5vQjM3 S685 26,1
Error in line 78: Zzw S391 68,4
Error in line 107: Zzw SF91 77,4
Error in line 113: XdexF5vQjM3 S391 74,4
Error in line 103: lOO S466 36,9
Error in line 99: Zzw S391 24,5
Error in line 147: XVFqMJe S391 76,8
Error in line 155: S685 S391 196,6
Error in line 161: Zzw S391 42,8
Error in line 153: XdexF5vQjM3 S685 48,6
Error in line 154: XVFqMJe S466 17,3
Error in line 166: XVFqMJe S391 43,3
Error in line 178: XVFqMJe A212 49,7
Error in line 188: XVFqMJe S391 80,6
Error in line 196: XVFqMJe S466 47,5
Error in line 197: GRT S685 22,4
Error in line 213: GRT S685 13,4
Error in line 203: XVFqMJe S685 45,7
Error in line 236: XVFqMJe A212 22,7
Error in line 233: XdexF5vQjM3 S466 416,7
Error in line 240: Zzw A212 67,3
